@@ -1,3 +1,3 @@
-# $Id: __init__.py,v 1.1 2003/07/04 20:11:59 plonista Exp $
+# $Id$
 # $Source: /home/hazmat/projects/psvn/collective/CMFFormController/Extensions/__init__.py,v $
 __version__ = "$Revision: 1.1 $"[11:-2]
