@@ -1,1 +1,1 @@
-1.0.5 beta
+1.1 prerelease
